infra/k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bodam-backend-service
  labels:
    app: bodam-backend
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-ip: "159.89.208.161"
    service.beta.kubernetes.io/do-loadbalancer-type: "REGIONAL"
spec:
  type: LoadBalancer
  selector:
    app: bodam-backend
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
